# routes/api.php
@@ -10,9 +10,9 @@ Route::get('/user', function (Request $request) {
 
 Route::prefix('v1')->controller(TodosController::class)->group(function () {
     Route::get('/todos', 'index');
+    Route::get('/todos/{id}', 'get');
     Route::post('/todos', 'store');
     Route::patch('/todos/{id}', 'update');
     Route::put('/todos/{id}', 'updatePUT');
     Route::delete('/todos/{id}', 'destroy');
 });
-
